Prepare for unit tests.

--- a/bower.json
+++ b/bower.json
@@ -20,5 +20,8 @@
 			"name": "Oliver Nowak",
 			"homepage": "https://github.com/ndm2"
 		}
-	]
+	],
+	"devDependencies": {
+		"ckeditor": "4"
+	}
 }
