--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "devDependencies": {
-    "bower": "~1.5.2",
-    "grunt": "~0.4.5",
-    "grunt-cli": "~0.1.13",
-    "grunt-contrib-jshint": "~0.11.3",
-    "grunt-contrib-qunit": "~0.7.0",
-    "qunitjs": "~1.19.0"
+    "bower": "~1.8.8",
+    "grunt": "~1.0.4",
+    "grunt-cli": "~1.3.2",
+    "grunt-contrib-jshint": "~2.1.0",
+    "grunt-contrib-qunit": "~3.1.0",
+    "qunit": "~2.9.2"
   }
 }
